--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_svg: ^2.0.10+1
   shimmer: ^3.0.0
   flutter_slidable: ^3.1.0
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
